# agentic-granite-openrouter-app

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.jupyter  README.md  agent.py  app.py  docker-compose.yml  open_royter_test.py  pyproject.toml  uv_reference_gauide.md
.ipynb_checkpoints/: chat_agent-checkpoint.py
notebooks/: 01_sanity_check.ipynb  03_token_counting.ipynb  04_synthetic_data.ipynb  06_context_engineering_multi_agent.ipynb  README.MD
notebooks/.ipynb_checkpoints/: 01_sanity_check-checkpoint.ipynb  02_prompt_engineering-checkpoint.ipynb  03_token_counting-checkpoint.ipynb  05_benchmark-checkpoint.ipynb  06_context_engineering_multi_agent-checkpoint.ipynb  test_data-checkpoint.json
prompts/: reACT.txt
